Fix spacing issues, hopefully

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -176,14 +176,14 @@ table.full {
 #radlayerstill{
 	background: #C0DBFF;
 	text-align: center;
-	padding: 5px;
-	width: 325px;
+	padding: 0px;
+	width: 320px;
 }
 #radlayerloop{
 	background: #FFC0CB;
 	text-align: center;
-	padding: 5px;
-	width: 325px;
+	padding: 0px;
+	width: 320px;
 }
 form {
  margin: 0px;
